--- a/index.html
+++ b/index.html
@@ -1,4 +1,55 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Koblorz</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Koblorz</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+        .container {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        h1 {
+            margin-top: 0;
+        }
+        p {
+            margin-bottom: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to Koblorz</h1>
+        <p>Koblorz - Your destination for all things technology.</p>
+    </header>
+    <div class="container">
+        <h2>About Us</h2>
+        <p>Koblorz is a platform dedicated to providing the latest news, reviews, and insights in the world of technology. Whether you're a tech enthusiast, a professional, or just curious about the latest trends, Koblorz has something for you.</p>
+    </div>
+    <footer>
+        <p>&copy; 2024 Koblorz. All rights reserved.</p>
+    </footer>
+</body>
+</html>
