--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <p>Koblorz - Your destination for all things technology.</p>
     </header>
     <div class="container">
-        <h2>About Us</h2>
-        <p>Koblorz is a platform dedicated to providing the latest news, reviews, and insights in the world of technology. Whether you're a tech enthusiast, a professional, or just curious about the latest trends, Koblorz has something for you.</p>
+        <h2>Koblorz</h2>
+        <p>Koblorz is a platform of technology.</p>
     </div>
     <footer>
         <p>&copy; 2024 Koblorz. All rights reserved.</p>
