--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
 <body>
     <header>
         <h1>Welcome to Koblorz</h1>
+        .tech-button {
+            background-color: #007bff; /* Blue color */
+            color: #fff; /* White text color */
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .tech-button:hover {
+            background-color: #0056b3; /* Darker blue color on hover */
         <p>Koblorz - Your destination for all things technology.</p>
         <a href="about.html"><button>About Us</button></a>
     </header>
