--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5;url=https://yourdomain.com">
+    <meta http-equiv="refresh" content="5;url=https://koblorz.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Page Not Found</title>
 </head>
