--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 title: About
-permalink: /about/
+permalink:
+  - /about/
+  - /about-us/
 ---
 <!DOCTYPE html>
 <html lang="en">
