--- a/about.html
+++ b/about.html
@@ -1,9 +1,7 @@
 ---
 layout: default
 title: About
-permalink:
-  - /about/
-  - /about-us/
+permalink: /about-us/
 ---
 <!DOCTYPE html>
 <html lang="en">
