--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ permalink: /
     <header>
         <h1>Welcome to Koblorz</h1>
         <p>Koblorz - Your destination for all things technology.</p>
-        <a href="about"><button>About Us</button></a>
+        <a href="about-us"><button>About Us</button></a>
     </header>
     <div class="container">
         <h2>Koblorz</h2>
