--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ permalink: /
     // Check if the current URL ends with "index" or "index.html"
     if (window.location.pathname.endsWith("/index") || window.location.pathname.endsWith("/index.html")) {
         // Redirect to the custom 404 page
-        window.location.replace("/404.html");
+        window.location.replace("/404");
     }
 </script>
     <meta charset="UTF-8">
@@ -55,7 +55,7 @@ permalink: /
     <header>
         <h1>Welcome to Koblorz</h1>
         <p>Koblorz - Your destination for all things technology.</p>
-        <a href="about-us"><button>About Us</button></a>
+        <a href="about"><button>About Us</button></a>
     </header>
     <div class="container">
         <h2>Koblorz</h2>
