--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ permalink: /
     // Check if the current URL ends with "index" or "index.html"
     if (window.location.pathname.endsWith("/index") || window.location.pathname.endsWith("/index.html")) {
         // Redirect to the custom 404 page
-        window.location.replace("/404");
+        window.location.replace("/");
     }
 </script>
     <meta charset="UTF-8">
