--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ permalink: /
     <script>
     // Check if the current URL ends with "index" or "index.html"
     if (window.location.pathname.endsWith("/index") || window.location.pathname.endsWith("/index.html")) {
-        // Redirect to the custom 404 page
+        // Redirect to the home page
         window.location.replace("/");
     }
 </script>
