--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
----
-layout: default
-title: Home
-permalink: /
----
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +19,7 @@ permalink: /
         header {
             background-color: #333;
             color: #fff;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
         }
         h1 {
@@ -42,17 +37,29 @@ permalink: /
             bottom: 0;
             width: 100%;
         }
+        button {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Welcome to Koblorz</h1>
         <p>Koblorz - Your destination for all things technology.</p>
-        <a href="about"><button>About Us</button></a>
+        <a href="about.html"><button>About Us</button></a>
     </header>
     <div class="container">
-        <h2>Koblorz</h2>
-        <p>Koblorz is a platform of technology.</p>
+        <h2>About Koblorz</h2>
+        <p>Koblorz is a platform dedicated to technology, providing the latest news, reviews, and insights.</p>
     </div>
     <footer>
         <p>&copy; 2024 Koblorz. All rights reserved.</p>
