--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <header>
         <h1>Welcome to Koblorz</h1>
         <p>Koblorz - Your destination for all things technology.</p>
-        <a href="about.html"><button>About Us</button></a>
+        <a href="about"><button>About Us</button></a>
     </header>
     <div class="container">
         <h2>About Koblorz</h2>
