--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
         if (window.location.hostname !== "koblorz.com") {
             window.location.replace("https://koblorz.com");
         }
+
+        // Redirect to root domain if accessed via /index or /index.html
+        if (window.location.pathname.endsWith("/index") || window.location.pathname.endsWith("/index.html")) {
+            window.location.replace("https://koblorz.com");
+        }
     </script>
 </body>
 </html>
