--- a/404.html
+++ b/404.html
@@ -5,9 +5,41 @@
     <meta http-equiv="refresh" content="5;url=https://koblorz.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Page Not Found</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+        .container {
+            max-width: 400px;
+        }
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 1.1rem;
+            margin-bottom: 30px;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>404 - Page Not Found</h1>
-    <p>We couldn't find the page you were looking for. You will be redirected to the homepage shortly.</p>
+    <div class="container">
+        <h1>404 - Page Not Found</h1>
+        <p>We couldn't find the page you were looking for.</p>
+        <p>You will be redirected to the <a href="https://koblorz.com">homepage</a> shortly.</p>
+    </div>
 </body>
 </html>
