--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@ permalink: /about/
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
+            line-height: 1.6;
         }
         .container {
             max-width: 960px;
@@ -24,23 +25,20 @@ permalink: /about/
         header {
             background-color: #333;
             color: #fff;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
         }
-        h1 {
+        h1, h2 {
             margin-top: 0;
-        }
-        p {
-            margin-bottom: 20px;
         }
         footer {
             background-color: #333;
             color: #fff;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+        }
+        footer p {
+            margin-bottom: 0;
         }
     </style>
 </head>
