--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
+            line-height: 1.6;
         }
         .container {
             max-width: 960px;
             margin: 0 auto;
             padding: 20px;
+            text-align: center;
         }
         header {
             background-color: #333;
             color: #fff;
             padding: 20px 0;
-            text-align: center;
         }
         h1 {
             margin-top: 0;
@@ -31,7 +32,7 @@
         footer {
             background-color: #333;
             color: #fff;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
             position: fixed;
             bottom: 0;
