--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ permalink: /about/
         <p>Our team consists of passionate individuals with diverse backgrounds in technology. From software engineers to tech enthusiasts, we come together to curate and deliver quality content to our audience.</p>
         
         <h2>Contact Us</h2>
-        <p>If you have any questions, feedback, or suggestions, feel free to reach out to us at <a href="mailto:contact@koblorz.com">contact@koblorz.com</a>.</p>
+        <p>If you have any questions, feedback, or suggestions, feel free to reach out to us at <a href="mailto:koblorz@koblorz.com">koblorz@koblorz.com</a>.</p>
     </div>
     <footer>
         <p>&copy; 2024 Koblorz. All rights reserved.</p>
