--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ permalink: /about/
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Koblorz</title>
+    <title>About Us - KOBLORZ</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,20 +44,20 @@ permalink: /about/
 </head>
 <body>
     <header>
-        <h1>About Koblorz</h1>
+        <h1>About KOBLORZ</h1>
     </header>
     <div class="container">
         <h2>Our Mission</h2>
-        <p>Koblorz is dedicated to providing the latest news, reviews, and insights in the world of technology. We aim to empower our readers with knowledge and understanding of the ever-evolving tech landscape.</p>
+        <p>KOBLORZ is dedicated to providing the latest news, reviews, and insights in the world of technology. We aim to empower our readers with knowledge and understanding of the ever-evolving tech landscape.</p>
         
         <h2>Our Team</h2>
         <p>Our team consists of passionate individuals with diverse backgrounds in technology. From software engineers to tech enthusiasts, we come together to curate and deliver quality content to our audience.</p>
         
         <h2>Contact Us</h2>
-        <p>If you have any questions, feedback, or suggestions, feel free to reach out to us at <a href="mailto:koblorz@koblorz.com">koblorz@koblorz.com</a>.</p>
+        <p>If you have any questions, feedback, or suggestions, feel free to reach out to us at <a href="mailto:koblorz@koblorz.com">koblorz@koblorz.com</a> or KOBLORZ social medias.</p>
     </div>
     <footer>
-        <p>&copy; 2024 Koblorz. All rights reserved.</p>
+        <p>&copy; 2024 KOBLORZ. All rights reserved.</p>
     </footer>
 </body>
 </html>
