--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to KOBLORZ</title>
+    <title>Welcome to Koblorz</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,12 +52,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to KOBLORZ</h1>
-        <p>KOBLORZ - Your destination for all things technology.</p>
+        <h1>Welcome to Koblorz</h1>
+        <p>Koblorz - Your destination for all things technology.</p>
         <a href="about"><button>Learn More</button></a>
     </div>
     <div class="footer">
-        <p>&copy; 2024 KOBLORZ. All rights reserved.</p>
+        <p>&copy; 2024 Koblorz. All rights reserved.</p>
     </div>
 </body>
 </html>
