--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="container">
         <h1>Welcome to Koblorz</h1>
-        <p>Koblorz - Your destination for all things technology.</p>
+        <p>Koblorz</p>
         <a href="about"><button>Learn More</button></a>
     </div>
     <div class="footer">
